aryans-club-website-almost-done

--- a/TAC/header.html
+++ b/TAC/header.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- Navbar Started -->
-    <nav class="navbar navbar-expand-xl navbar-light bg-white" aria-label="Sixth navbar example">
+    <nav class="navbar fixed-top navbar-expand-xl navbar-light bg-white" aria-label="Sixth navbar example">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./assets/images/logo-big.png" style="height: 60px;" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample06"
@@ -32,22 +32,22 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Upcoming Programs</a>
+                        <a class="nav-link" href="./index.html#upcoming-programs">Upcoming Programs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ongoing Programs</a>
+                        <a class="nav-link" href="./index.html#ongoing-programs">Ongoing Programs</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
                             aria-expanded="false">About</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown06">
-                            <li><a class="dropdown-item" href="#">About Us</a></li>
-                            <li><a class="dropdown-item" href="#">Srila Prabhupada</a></li>
-                            <li><a class="dropdown-item" href="#">ISKCON</a></li>
+                            <li><a class="dropdown-item" href="./about-us.html">About Us</a></li>
+                            <li><a class="dropdown-item" href="./srila-prabhupada.html">Srila Prabhupada</a></li>
+                            <li><a class="dropdown-item" href="./iskcon-juhu.html">ISKCON</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="./contact-us.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
