tac-website-pages-updates

--- a/TAC/index.html
+++ b/TAC/index.html
@@ -79,7 +79,7 @@
                     </h2>
                     <p class="lead">Welcome to Youth Wing of ISKCON Juhu!</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Join Us</button>
+                        <div><a href="https://forms.gle/ayZdtCtrZ4iYw2Fh8" class="btn btn-primary btn-lg px-4 me-md-2">Join Us</a></div>
                     </div>
                 </div>
             </div>
@@ -109,8 +109,7 @@
                             <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
                         </svg> 
                         How to attend ?</b> <br/>You'll get zoom link after registering and joining our whatsapp group.
-                        <br/><br/>
-                        <b style="font-style: italic;">Important Note:</b> Only for Boys (Age Group- 15 Years to 30 Years)
+                        
                     </p>
                     <button type="button"  onclick="location.href = './children_camp.html';" class="btn btn-primary btn-md px-4 me-md-2">Know more and Enroll Now</button>
                 </div>
@@ -182,7 +181,7 @@
                         <br/><br/>
                         <b style="font-style: italic;">Important Note:</b> Only for Boys (Age Group- 15 Years to 30 Years)
                     </p>
-                    <button type="button" class="btn btn-primary btn-md px-4 me-md-2">Enroll Now</button>
+                    <div><a type="button" class="btn btn-primary btn-md px-4 me-md-2" href="https://forms.gle/XTVxnrbhzZgw9eDbA">Enroll Now</a></div>
                 </div>
             </div>
             <!-- Row Ended -->
@@ -206,7 +205,7 @@
                         How to attend ?</b> <br/>You'll get zoom link after registering and joining our whatsapp group.
                         <br/><br/>
                     </p>
-                    <button type="button" class="btn btn-primary btn-md px-4 me-md-2">Enroll Now</button>
+                    <div><a href="https://forms.gle/RxykoekKrU84uPGm8" class="btn btn-primary btn-md px-4 me-md-2">Enroll Now</a></div>
                 </div>
             </div>
             <!-- Row Ended -->
