--- a/TAC/srila-prabhupada.html
+++ b/TAC/srila-prabhupada.html
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarsExample06">
               <ul class="navbar-nav me-auto mb-2 mb-xl-0">
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="./index.html#upcoming-programs">Upcoming Programs</a>
@@ -40,11 +40,11 @@
                       <a class="nav-link" href="./index.html#ongoing-programs">Ongoing Programs</a>
                   </li>
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
+                      <a class="nav-link dropdown-toggle active"  href="#" id="dropdown06" data-bs-toggle="dropdown"
                           aria-expanded="false">About</a>
                       <ul class="dropdown-menu" aria-labelledby="dropdown06">
                           <li><a class="dropdown-item" href="./about-us.html">About Us</a></li>
-                          <li><a class="dropdown-item" href="./srila-prabhupada.html">Srila Prabhupada</a></li>
+                          <li><a class="dropdown-item" aria-current="page" href="./srila-prabhupada.html">Srila Prabhupada</a></li>
                           <li><a class="dropdown-item" href="./iskcon-juhu.html">ISKCON</a></li>
                       </ul>
                   </li>
