--- a/TAC/registration.html
+++ b/TAC/registration.html
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse" id="navbarsExample06">
               <ul class="navbar-nav me-auto mb-2 mb-xl-0">
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="./index.html#upcoming-programs">Upcoming Programs</a>
