--- a/TAC/footer.html
+++ b/TAC/footer.html
@@ -1,3 +1,5 @@
+<!-- Copy this template as it is to start a new page -->
+
 <!doctype html>
 <html lang="en">
 
@@ -6,17 +8,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="TODO">
     <meta name="author" content="Shaktiraj Daudra">
-    <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/navbars/">
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet"> -->
-
-
+    
+    <title>title</title>
+    <link rel="icon" href="./assets/images/logo-small.png" type="image/png" sizes="16x16">
 
     <!-- Bootstrap core CSS -->
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/bs-css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Lora&display=swap" rel="stylesheet">
+    <link href="./assets/css/header.css" rel="stylesheet">
 
+    <!-- Add your CSS Here -->
 </head>
 
 <body>
+    <!-- Navbar Started -->
+    <nav class="navbar navbar-expand-xl navbar-light bg-white" aria-label="Sixth navbar example">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="./assets/images/logo-big.png" style="height: 60px;" /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample06"
+                aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExample06">
+                <ul class="navbar-nav me-auto mb-2 mb-xl-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html#upcoming-programs">Upcoming Programs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html#ongoing-programs">Ongoing Programs</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
+                            aria-expanded="false">About</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdown06">
+                            <li><a class="dropdown-item" href="./about-us.html">About Us</a></li>
+                            <li><a class="dropdown-item" href="./srila-prabhupada.html">Srila Prabhupada</a></li>
+                            <li><a class="dropdown-item" href="./iskcon-juhu.html">ISKCON</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact-us.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar Ended -->
+    
+    <!-- Content Started -->
+    <div class="section">
+        <div class="container col-xxl-9 px-4 py-5">
+            <h1 class="display-4 blue-grey700-text title-font text-uppercase"><span class="p-color-text title-font display-1 " >T</span>he Title</h1>
+        </div>
+    </div>
+    <!-- Content Ended -->
+
     <!-- Footer Started -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="facebook" viewBox="0 0 16 16">
@@ -51,7 +101,7 @@
     </div>
     <!-- Footer Ended -->
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/bs-js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
