--- a/TAC/registration.html
+++ b/TAC/registration.html
@@ -78,7 +78,7 @@
                         <label for="firstName" class="form-label">Father's Full name<span style="color:#c5331c;">*</span></label>
                         <input type="text" class="form-control" id="father_name" placeholder="" value="" required>
                         <div class="invalid-feedback">
-                          Valid first name is required.
+                          Valid name is required.
                         </div>
                       </div>
           
@@ -86,7 +86,7 @@
                         <label for="lastName" class="form-label">Mother's Full name<span style="color:#c5331c;">*</span></label>
                         <input type="text" class="form-control" id="mother_name" placeholder="" value="" required>
                         <div class="invalid-feedback">
-                          Valid last name is required.
+                          Valid name is required.
                         </div>
                       </div>
 
