Navigation link updates

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
                             aria-expanded="false">Corporate&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown06">
-                            <li><a class="dropdown-item" href="./temp.html">Conferences</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Trainings</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Off Premises</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Activities</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Yearly Programs</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Official retail extensions</a></li>
+                            <li><a class="dropdown-item" href="./corporate-conferences.html">Conferences</a></li>
+                            <li><a class="dropdown-item" href="./corporate-trainings.html">Trainings</a></li>
+                            <li><a class="dropdown-item" href="./corporate-off-premises.html">Off Premises</a></li>
+                            <li><a class="dropdown-item" href="./corporate-activities.html">Activities</a></li>
+                            <li><a class="dropdown-item" href="./corporate-yearly-programs.html">Yearly Programs</a></li>
+                            <li><a class="dropdown-item" href="./corporate-official-retail-extensions.html">Official retail extensions</a></li>
                         </ul>
                     </li>
                     
@@ -51,19 +51,20 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
                             aria-expanded="false">Individual Groups&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown06">
-                            <li><a class="dropdown-item" href="./temp.html">Trainings</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Off Premises</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Activity</a></li>
+                            <li><a class="dropdown-item" href="./individuals-trainings.html">Trainings</a></li>
+                            <li><a class="dropdown-item" href="./individuals-off-premises.html">Off Premises</a></li>
+                            <li><a class="dropdown-item" href="./individuals-activity.html">Activity</a></li>
                         </ul>
                     </li>
+                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
                             aria-expanded="false">Personal&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown06">
-                            <li><a class="dropdown-item" href="./temp.html">Mental/Physical Hygenic</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">On Call Solutions</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Home Visits</a></li>
-                            <li><a class="dropdown-item" href="./temp.html">Special Services</a></li>
+                            <li><a class="dropdown-item" href="./personal-mental-and-physical-hygenic.html">Mental/Physical Hygenic</a></li>
+                            <li><a class="dropdown-item" href="./personal-on-call-solutions.html">On Call Solutions</a></li>
+                            <li><a class="dropdown-item" href="./personal-home-visits.html">Home Visits</a></li>
+                            <li><a class="dropdown-item" href="./personal-special-services.html">Special Services</a></li>
                         </ul>
                     </li>
                 </ul>
