--- a/TAC/header.html
+++ b/TAC/header.html
@@ -1,26 +1,8 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="TODO">
-    <meta name="author" content="Shaktiraj Daudra">
-    
-
-    <!-- Bootstrap core CSS -->
-    <link href="./assets/bs-css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Lora&display=swap" rel="stylesheet">
     <link href="./assets/css/header.css" rel="stylesheet">
-
-    <!-- Add your CSS Here -->
-</head>
-
-<body>
     <!-- Navbar Started -->
     <nav class="navbar fixed-top navbar-expand-xl navbar-light bg-white" aria-label="Sixth navbar example">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./assets/images/logo-big.png" style="height: 60px;" /></a>
+        <div class="container">
+            <a class="navbar-brand" href="/"><img src="./assets/images/logo-big.png" style="height: 60px;" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample06"
                 aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,7 +11,7 @@
             <div class="collapse navbar-collapse" id="navbarsExample06">
                 <ul class="navbar-nav me-auto mb-2 mb-xl-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html#upcoming-programs">Upcoming Programs</a>
@@ -53,9 +35,3 @@
             </div>
         </div>
     </nav>
-    <!-- Navbar Ended -->
-
-    <script src="./assets/bs-js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
