--- a/TAC/registration.html
+++ b/TAC/registration.html
@@ -427,8 +427,16 @@
         <center><button id="submitbttn" onclick="join('LBGO1')" class="btn btn-primary btn-lg" type="submit">Submit</button></center>
     </div>
     <!-- Content Ended -->
+    <!-- Footer Started -->
+    <div data-include="footer.html"></div>
+    
+    <!-- Footer Ended -->
+
 
     <script src="./assets/bs-js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.onload=function(){function a(a,b){var c=/^(?:file):/,d=new XMLHttpRequest,e=0;d.onreadystatechange=function(){4==d.readyState&&(e=d.status),c.test(location.href)&&d.responseText&&(e=200),4==d.readyState&&200==e&&(a.outerHTML=d.responseText)};try{d.open("GET",b,!0),d.send()}catch(f){}}var b,c=document.getElementsByTagName("*");for(b in c)c[b].hasAttribute&&c[b].hasAttribute("data-include")&&a(c[b],c[b].getAttribute("data-include"))};
+    </script>
 
     <!-- Firebase Script -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
