--+ header icon size change --+ Implemented Footer According To Requirements.

--- a/TAC/footer.html
+++ b/TAC/footer.html
@@ -1,7 +1,4 @@
 <!-- Footer Started -->
-<link href="./assets/bs-css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Lora&display=swap" rel="stylesheet">
-<link href="./assets/css/header.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,41 +12,32 @@
 
             <div class="cta d-block d-md-flex align-items-center px-5">
                 <div>
-                    <h2 class="mb-0">Feel free contact us if you have any queries.</h2>
-                    <h3 class="text-dark">Let's get started!</h3>
+                    <h2 class="mb-0">IF YOU HAVE ANY QUERY....</h2>
+                    <h3 class="text-dark">OR YOU MAY WHATSAPP US ON </h3>
                 </div>
-                <div class="ml-auto">
-                    <a href="/contact-us.html" class="btn btn-dark rounded-0 py-3 px-5">Contact us</a>
+                <div class="mx-lg-auto ml-auto">
+                    <a href="https://wa.me/8433631858" class="btn btn-dark rounded-0 py-2 px-5 wp"><h2>8433631858  <i class="px-3 fa-brands fa-whatsapp"></i></h2></a>
                 </div>
             </div>
             <div class="row">
-
-                <div class="col-sm">
-                    <a href="#" class="footer-logo">© The Aryans Club | ISKCON Juhu</a>
-                    <p class="copyright">
-                        <small>&copy; 2022</small>
-                    </p>
+                <div class="col-md-10">
+                    <h3><u> Address </u></h3>
+                    <h2>ISCKON</h2>
+                    <h3>
+                        International Society for Krishna Consciousness <br>
+                        Hare Krishna land, Juhu, Mumbai - 400049
+                    </h3>
                 </div>
-                <div class="col-sm">
+                <!-- <div class="col-sm">
                     <h3>Contact Us</h3><hr>
                     <ul class="list-unstyled links">
                         <li>Call Us: <i class="fa fa-phone" aria-hidden="true"></i> <br> <a href="tel:8433631858">8433631858</a> <br> <a href="tel:9074230903">9074230903</a></li>
                         <li>Email: <i class="fas fa-envelope"></i> <a href="mailto:thearyansclub@gmail.com">thearyansclub@gmail.com</a></li>
                     </ul>
-                </div>
+                </div> -->
 
-                <div class="col-md-3">
-                    <h3>Follow us</h3><hr>
-                    <ul class="list-unstyled social">
-                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-                    </ul>
-                </div>
-
-                <div class="col-sm">
-                    <h3>Usefull Links</h3><hr>
+                <div class="col-md">
+                    <h3><u> Usefull Links </u></h3>
                     <ul class="list-unstyled links">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Latest Events</a></li>
@@ -57,16 +45,23 @@
                         <li><a href="#">About Us</a></li>
                     </ul>
                 </div>
-
-                <div class="col-sm">
-                    <h3>Address</h3><hr>
-                    <p>
-                        ISKCON Juhu, Hare Krishna Land
-                        Mumbai - 400049,
-                        Maharashtra, India
-                    </p>
+            </div>
+            <hr>
+            <div class="row mt-5">
+                <div class="col-md-10">
+                    <a href="#" class="footer-logo"><h3>&copy; 2022 The Aryans Club | ISKCON Juhu</h3></a>
                 </div>
-
+                <div class="col-md links">
+                    <a href="#">Privacy Policy</a>
+                </div>
+            </div>
+            <div class="row-md mx-md-n6 float-end">
+                    <ul class="list-unstyled social">
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                    </ul>
             </div>
         </div>
     </div>
