--- a/TAC/index.html
+++ b/TAC/index.html
@@ -20,6 +20,10 @@
 
     <!-- Add your CSS Here -->
     <link href="./assets/css/index.css" rel="stylesheet">
+    <script>
+        window.onload=function(){function a(a,b){var c=/^(?:file):/,d=new XMLHttpRequest,e=0;d.onreadystatechange=function(){4==d.readyState&&(e=d.status),c.test(location.href)&&d.responseText&&(e=200),4==d.readyState&&200==e&&(a.outerHTML=d.responseText)};try{d.open("GET",b,!0),d.send()}catch(f){}}var b,c=document.getElementsByTagName("*");for(b in c)c[b].hasAttribute&&c[b].hasAttribute("data-include")&&a(c[b],c[b].getAttribute("data-include"))};
+    </script>
+
 </head>
 
 <body>
@@ -56,8 +60,10 @@
     <div class="section">
         <div class="container col-xxl-9 px-4 py-5">
             <h1 id="upcoming-programs" class="display-4 blue-grey700-text title-font text-uppercase"><span class="p-color-text title-font display-1 " >U</span>pcoming Programs</h1>
-            <!-- Row Started -->
-            <div class="row py-5 flex-row justify-content-center">
+            <!-- UPCOMMING PROGRAMS HERE -->
+            <!-- Row Started : Kartik Vrindavan Yatra -->
+            
+            <!-- <div class="row py-5 flex-row justify-content-center">
                 <div class="col-12 col-sm-7 col-lg-6">
                     <img src="./assets/images/prog-kanha-ki-pathshala.jpeg" alt="Science of Self Discovery visual" style="width: 100%;"/>
                 </div>
@@ -81,10 +87,10 @@
                     </p>
                     <button type="button"  onclick="location.href = './children_camp.html';" class="btn btn-primary btn-md px-4 me-md-2">Know more and Enroll Now</button>
                 </div>
-            </div>
+            </div> -->
             <!-- Row Ended -->
             <!-- Row Started -->
-            <div class="row pt-5 flex-row justify-content-center">
+            <!-- <div class="row pt-5 flex-row justify-content-center">
                 <div class="col-12 col-sm-7 col-lg-6">
                     <video style="width: 100%; pointer-events: none;"  muted loop controls autoplay>
                         <source src="./assets/images/prog-vrindavan.mp4" type="video/mp4">
@@ -119,7 +125,7 @@
                     </p>
                     <button type="button" onclick="location.href = './kartikyatra.html';" class="btn btn-primary btn-md px-4 me-md-2">Know More and Register Now</button>
                 </div>
-            </div>
+            </div> -->
             <!-- Row Ended -->
         </div>
     </div>
@@ -188,10 +194,6 @@
 
 
     <script src="./assets/bs-js/bootstrap.bundle.min.js"></script>
-    <script>
-        window.onload=function(){function a(a,b){var c=/^(?:file):/,d=new XMLHttpRequest,e=0;d.onreadystatechange=function(){4==d.readyState&&(e=d.status),c.test(location.href)&&d.responseText&&(e=200),4==d.readyState&&200==e&&(a.outerHTML=d.responseText)};try{d.open("GET",b,!0),d.send()}catch(f){}}var b,c=document.getElementsByTagName("*");for(b in c)c[b].hasAttribute&&c[b].hasAttribute("data-include")&&a(c[b],c[b].getAttribute("data-include"))};
-    </script>
-
 </body>
 
 </html>
