--- a/TAC/footer.html
+++ b/TAC/footer.html
@@ -48,10 +48,10 @@
             </div>
             <hr>
             <div class="row mt-5">
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <a href="#" class="footer-logo"><h3>&copy; 2022 The Aryans Club | ISKCON Juhu</h3></a>
                 </div>
-                <div class="col-md links">
+                <div class="col-md-5 mx-5 links text-left">
                     <a href="#">Privacy Policy</a>
                 </div>
             </div>
