implement changes to Navbar

--- a/seminars-page.html
+++ b/seminars-page.html
@@ -38,8 +38,8 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
                             aria-expanded="false">Corporate&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown06">
-                            <li><a class="dropdown-item" href="./corporate-conferences.html">Conferences</a></li>
-                            <li><a class="dropdown-item" href="./corporate-trainings.html">Trainings</a></li>
+                            <li><a class="dropdown-item" href="./seminars-page.html">Seminars</a></li>
+                            <li><a class="dropdown-item" href="./workshop&trainings-page.html">Trainings</a></li>
                             <li><a class="dropdown-item" href="./corporate-off-premises.html">Off Premises</a></li>
                             <li><a class="dropdown-item" href="./corporate-activities.html">Activities</a></li>
                             <li><a class="dropdown-item" href="./corporate-yearly-programs.html">Yearly Programs</a></li>
@@ -71,18 +71,12 @@
         </div>
     </nav>
     <!-- Navbar Ended -->
-    <p class="lead lh-1 mb-3 px-3">
-      -No of people : 35 to 70<br/><br/>
-      -Venue/Place (Iskcon to decide) Spiritual Camps/outings/corporate suggestions<br/><br/>
-      -Logistics responsibility is of corporates<br/><br/>
-      -Facilitators : 6 Devotees (Iskcon)<br/><br/>
-      -Topics  - Just Spiritual, Refreshments, Chanting , Dancing/Kirtan, Prasadam, Quiz,Q&A<br/><br/>
-      -Travel/Logistics responsibility is of corporates<br/><br/>
-      -Camp timeline : 2 days<br/><br/>
-      -Duration: 8 hours a day <br/><br/>
-      -Break slots : TBA<br/><br/>
-      
-    </p>
+    <div class="container">
+        <h1>Seminars</h1>
+        <p class="lead lh-1 mb-3 px-3">
+            -No of people : 90 to 120<br/><br/>
+        </p>
+    </div>
     <!-- Footer Started -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
       <symbol id="facebook" viewBox="0 0 16 16">
