--- a/workshop&trainings-page.html
+++ b/workshop&trainings-page.html
@@ -71,18 +71,12 @@
         </div>
     </nav>
     <!-- Navbar Ended -->
-    <p class="lead lh-1 mb-3 px-3">
-        -No of people : 40 to 50<br/><br/>
-        -Venue TBA (Mostly inhouse/corporate venue) to be handled by corporate<br/><br/>
-        -Logistics responsibility is of corporates<br/><br/>
-        -Speaker panel (3 internal from corporate + 2 external Iskcon)<br/><br/>
-        -Topics (corporate to choose we will elaborate the pointers)<br/><br/>
-        -Event timeline : 1 Day<br/><br/>
-        -Duration of event : 5 hours excluding breaks<br/> <br/>
-        -Break slots : 15 mins, 30 mins, 15 mins<br/><br/>
-        -Sessions : 6 sessions + 30 min Q&A<br/><br/>
-
-    </p>
+    <div class="container">
+        <h1>Workshops And Training</h1>
+        <p class="lead lh-1 mb-3 px-3">
+            - Duration : 6 Hours ⧖<br/>
+        </p>
+    </div>
     <!-- Footer Started -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
       <symbol id="facebook" viewBox="0 0 16 16">
