--- a/personal-special-services.html
+++ b/personal-special-services.html
@@ -58,7 +58,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
                             aria-expanded="false">Personal&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown06">
-                            <li><a class="dropdown-item" href="spiritual-workout.html">Spiritual Workout</a></li>
+                            <li><a class="dropdown-item" href="./spiritual-workout.html">Spiritual Workout</a></li>
                             <li><a class="dropdown-item" href="./personal-on-call-solutions.html">On Call Solutions</a></li>
                             <li><a class="dropdown-item" href="./personal-home-visits.html">Home Visits</a></li>
                             <li><a class="dropdown-item" href="./personal-special-services.html">Special Services</a></li>
