--- a/TAC/footer.html
+++ b/TAC/footer.html
@@ -7,37 +7,37 @@
 <link href="./assets/css/footer.css" rel="stylesheet">
 <!-- Footer -->
 <footer class="footer-20192">
+
+    <div class="section" style="background-color: #e8f5e9;">
+        <div class="container col-xxl-9 px-4 py-2">
+            <h4 class="title-font text-uppercase text-center">If you have any query feel free to write us<br> 
+                <a class="title-font" style="word-break: break-all;" href="mailto:thearyansclub@gmail.com">thearyansclub@gmail.com</a>
+            </h4>
+        </div>
+    </div>
+
+    <div class="section" style="background-color: #fff59d;">
+        <div class="container col-xxl-9 px-4 py-2">
+            <h4 class="title-font text-uppercase text-center">Or you may whatsapp<br> 
+                @ <a class="title-font" style="word-break: break-all;" href="https://api.whatsapp.com/send?phone=917359802004">7359802004</a>
+            </h4>
+        </div>
+    </div>
+
+
+    <div class="py-5" style="color: white;">
     <div class="site-section">
         <div class="container">
-
-            <div class="cta d-block d-md-flex align-items-center px-5">
-                <div>
-                    <h2 class="mb-0">IF YOU HAVE ANY QUERY....</h2>
-                    <h3 class="text-dark">OR YOU MAY WHATSAPP US ON </h3>
-                </div>
-                <div class="mx-lg-auto ml-auto">
-                    <a href="https://wa.me/8433631858" class="btn btn-dark rounded-0 py-2 px-5 wp"><h2>8433631858  <i class="px-3 fa-brands fa-whatsapp"></i></h2></a>
-                </div>
-            </div>
             <div class="row">
-                <div class="col-md-10">
-                    <h3><u> Address </u></h3>
-                    <h2>ISCKON</h2>
-                    <h3>
-                        International Society for Krishna Consciousness <br>
+                <div class="col-12 col-lg-8 mb-5 mb-lg-0">
+                    <h2>ISKCON</h2>
+                    <h3 class="lead">
+                        International Society for Krishna Consciousness<br/>
                         Hare Krishna land, Juhu, Mumbai - 400049
                     </h3>
                 </div>
-                <!-- <div class="col-sm">
-                    <h3>Contact Us</h3><hr>
-                    <ul class="list-unstyled links">
-                        <li>Call Us: <i class="fa fa-phone" aria-hidden="true"></i> <br> <a href="tel:8433631858">8433631858</a> <br> <a href="tel:9074230903">9074230903</a></li>
-                        <li>Email: <i class="fas fa-envelope"></i> <a href="mailto:thearyansclub@gmail.com">thearyansclub@gmail.com</a></li>
-                    </ul>
-                </div> -->
 
-                <div class="col-md">
-                    <h3><u> Usefull Links </u></h3>
+                <div class="col-12 col-lg-4 text-lg-end">
                     <ul class="list-unstyled links">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Latest Events</a></li>
@@ -46,24 +46,34 @@
                     </ul>
                 </div>
             </div>
-            <hr>
-            <div class="row mt-5">
-                <div class="col-md-9">
-                    <a href="#" class="footer-logo"><h3>&copy; 2022 The Aryans Club | ISKCON Juhu</h3></a>
+
+            <hr/>
+            <div class="row">
+                <div class="col-12 col-lg-5" style="margin-top: 15px;">
+                    <a href="#" class="footer-logo"><h3>&copy; 2022 The Aryans Club</h3></a>
                 </div>
-                <div class="col-md-5 mx-5 links text-left">
+                <div class="col-12 col-lg-3 links text-left" style="margin-top: 15px;">
                     <a href="#">Privacy Policy</a>
                 </div>
+                <div class="col-12 col-lg-4 text-right">
+                    <ul class="list-unstyled social float-end" style="margin-bottom: 0px;">
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="row-md mx-md-n6 float-end">
+            <!-- <div class="row-md mx-md-n6 float-end">
                     <ul class="list-unstyled social">
                         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                         <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
                     </ul>
-            </div>
+            </div> -->
         </div>
+    </div>
     </div>
 </footer>
 
