--- a/TAC/footer.html
+++ b/TAC/footer.html
@@ -9,7 +9,7 @@
 <footer class="footer-20192">
 
     <div class="section" style="background-color: #e8f5e9;">
-        <div class="container col-xxl-9 px-4 py-2">
+        <div class="container col-xxl-9 px-4 py-3">
             <h4 class="title-font text-uppercase text-center">If you have any query feel free to write us<br> 
                 <a class="title-font" style="word-break: break-all;" href="mailto:thearyansclub@gmail.com">thearyansclub@gmail.com</a>
             </h4>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="section" style="background-color: #fff59d;">
-        <div class="container col-xxl-9 px-4 py-2">
+        <div class="container col-xxl-9 px-4 py-3">
             <h4 class="title-font text-uppercase text-center">Or you may whatsapp<br> 
                 @ <a class="title-font" style="word-break: break-all;" href="https://api.whatsapp.com/send?phone=917359802004">7359802004</a>
             </h4>
@@ -49,14 +49,14 @@
 
             <hr/>
             <div class="row">
-                <div class="col-12 col-lg-5" style="margin-top: 15px;">
+                <div class="col-12 col-lg-5 mt-lg-3">
                     <a href="#" class="footer-logo"><h3>&copy; 2022 The Aryans Club</h3></a>
                 </div>
-                <div class="col-12 col-lg-3 links text-left" style="margin-top: 15px;">
-                    <a href="#">Privacy Policy</a>
+                <div class="col-12 col-lg-3 links text-left mb-5 mb-lg-0 mt-lg-3">
+                    <a href="#">&nbsp;&nbsp;&nbsp;Privacy Policy</a>
                 </div>
                 <div class="col-12 col-lg-4 text-right">
-                    <ul class="list-unstyled social float-end" style="margin-bottom: 0px;">
+                    <ul class="list-unstyled social float-lg-end" style="margin-bottom: 0px;">
                         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                         <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
