Added Management Program Webpage

--- a/TAC/header.html
+++ b/TAC/header.html
@@ -14,7 +14,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html#upcoming-programs">Upcoming Programs</a>
+                        <a class="nav-link" href="./index.html#upcoming-programs">Featured Program</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html#ongoing-programs">Ongoing Programs</a>
