--- a/TAC/contact-us.html
+++ b/TAC/contact-us.html
@@ -7,56 +7,32 @@
     <meta name="description" content="TODO">
     <meta name="author" content="Shaktiraj Daudra">
     
-    <title>About Us</title>
+    <title> Contact Us | The Aryans Club </title>
     <link rel="icon" href="./assets/images/logo-small.png" type="image/png" sizes="16x16">
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/bs-css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Lora&display=swap" rel="stylesheet">
     <link href="./assets/css/header.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Add your CSS Here -->
+
+    <script>
+        window.onload=function(){function a(a,b){var c=/^(?:file):/,d=new XMLHttpRequest,e=0;d.onreadystatechange=function(){4==d.readyState&&(e=d.status),c.test(location.href)&&d.responseText&&(e=200),4==d.readyState&&200==e&&(a.outerHTML=d.responseText)};try{d.open("GET",b,!0),d.send()}catch(f){}}var b,c=document.getElementsByTagName("*");for(b in c)c[b].hasAttribute&&c[b].hasAttribute("data-include")&&a(c[b],c[b].getAttribute("data-include"))};
+    </script>
+
 </head>
 
 <body>
     <!-- Navbar Started -->
-    <nav class="navbar navbar-expand-xl navbar-light bg-white" aria-label="Sixth navbar example">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./assets/images/logo-big.png" style="height: 60px;" /></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample06"
-                aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsExample06">
-                <ul class="navbar-nav me-auto mb-2 mb-xl-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./index.html#upcoming-programs">Upcoming Programs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./index.html#ongoing-programs">Ongoing Programs</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
-                            aria-expanded="false">About</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown06">
-                            <li><a class="dropdown-item" href="./about-us.html">About Us</a></li>
-                            <li><a class="dropdown-item" href="./srila-prabhupada.html">Srila Prabhupada</a></li>
-                            <li><a class="dropdown-item" href="./iskcon-juhu.html">ISKCON</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./contact-us.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div data-include="header.html"></div>
     <!-- Navbar Ended -->
+
     <!-- Content Started -->
+    <!-- Add your elements here.... -->
     <div class="section">
         <div class="container col-xxl-9 px-4 py-5">
             <h1 class="display-4 blue-grey700-text title-font text-uppercase"><span class="p-color-text title-font display-1 " >C</span>ontact Us</h1>
@@ -80,13 +56,13 @@
     </div>
     <!-- Content Ended -->
 
+
+
     <!-- Footer Started -->
     <div data-include="footer.html"></div>
     <!-- Footer Ended -->
 
-    <script>
-        window.onload=function(){function a(a,b){var c=/^(?:file):/,d=new XMLHttpRequest,e=0;d.onreadystatechange=function(){4==d.readyState&&(e=d.status),c.test(location.href)&&d.responseText&&(e=200),4==d.readyState&&200==e&&(a.outerHTML=d.responseText)};try{d.open("GET",b,!0),d.send()}catch(f){}}var b,c=document.getElementsByTagName("*");for(b in c)c[b].hasAttribute&&c[b].hasAttribute("data-include")&&a(c[b],c[b].getAttribute("data-include"))};
-    </script>
+
     <script src="./assets/bs-js/bootstrap.bundle.min.js"></script>
 </body>
 
