--- a/chalo-vrindavan.html
+++ b/chalo-vrindavan.html
@@ -373,7 +373,7 @@
                   </svg>
                 </div>
                 <h4 class="fw-semibold mb-0">Check-in</h4>
-                <p class="text-body-secondary">05:00PM October 27, 2022</p>
+                <p class="text-body-secondary">05:00PM October 27, 2023</p>
               </div>
 
               <div class="col d-flex flex-column gap-2">
@@ -388,7 +388,7 @@
                   </svg>
                 </div>
                 <h4 class="fw-semibold mb-0">Check-out</h4>
-                <p class="text-body-secondary">11:00AM November 2, 2022</p>
+                <p class="text-body-secondary">11:00AM November 2, 2023</p>
               </div>
 
               <div class="col d-flex flex-column gap-2">
@@ -398,7 +398,7 @@
                 </div>
                 <h4 class="fw-semibold mb-0">Food Prasadam</h4>
                 <p class="text-body-secondary">We will provide delicious prasadam throughout the entire yatra, from
-                  dinner on October 27th, 2023 to lunch on November 2nd, 2023.</p>
+                  dinner on October 27th, 2023 to breakfast on November 2nd, 2023.</p>
               </div>
 
               <div class="col d-flex flex-column gap-2">
@@ -407,7 +407,7 @@
                   <i class="fas fa-bus"></i>
                 </div>
                 <h4 class="fw-semibold mb-0">Travel</h4>
-                <p class="text-body-secondary">We will arrange transportation by bus to visit various yatra places. </p>
+                <p class="text-body-secondary">We will arrange buses to visit various holy places. </p>
               </div>
             </div>
           </div>
@@ -426,7 +426,7 @@
             <img src="./assets/images/vrindavan.jpg" alt="Vrindavan" class="rounded-circle"
               style="width: 140px;" /><br /><br />
             <h2 class="fw-normal">We will explore</h2>
-            <p>In this 5 days we will explore range of Krishna Conscious spots, <b>the Nandagaon, Gokul, Rawal Dham,
+            <p>In this 5 days we will explore range of Krishna Conscious spots, <b>Nandagaon, Gokul, Rawal Dham,
                 Govardhan, Talvan, Madhuvan</b>, and more.</p>
             <p><a class="btn btn-secondary" href="#highlighted-spots">View details &raquo;</a></p>
           </div><!-- /.col-lg-6 -->
@@ -457,20 +457,18 @@
 
         <button type="button" onclick="window.location.href='https://forms.gle/sw5BS8LgttqEMGiP9'"
           class="btn btn-primary btn-lg px-4 me-sm-3">Register Now</button>
-        <br /><br />
+        <br/><br />
 
         <p class="lead">₹8000/devotee for Adults**</p>
-        <hr>
-        <h5><b>Early Bird Offer</b></h5>
-        <p class="lead">₹500 Gift pack for all the early-bird yatris* (Valid till 19 June)</p>
+        
         <hr>
         <h5><b>Children Discount</b></h5>
         <p class="lead">No charges for children upto 5 years. But, his/her accomodation will be with parents.</p>
         <p class="lead">50% charges for children in age group 5 to 12 years. But, his/her accomodation will be with
           parents.</p>
         <hr>
-        <p class="small">*Early bird offer will be considered only if full yatra fees is paid till date June 19, 2023
-          11:59PM.</p>
+        <p class="lead">Please note that the last date for registration is <b>June 30, 2023</b>.</p>
+          <hr>
         <p class="small">**Please note that Yatra fees do not cover the cost of flight or train tickets. You are responsible to book your own travel tickets.</p>
         <p class="small">For the convenience of yatris joining from Mumbai, we have provided train details in the following <a href="#train-suggestion">section</a>.</p>
       </div>
@@ -678,7 +676,7 @@
       <div class="container px-3 marketing">
         <hr class="featurette-divider" id="highlighted-spots">
         <h3 class="display-4 fw-normal">Train Suggestions</h3>
-        <p class="lead">Train bookings will start after mid-July. If you're joining from Mumbai, we'll have some suggested trains for you to consider, which we'll be adding soon. Keep checking back for updates.</p>
+        <p class="lead">Train bookings will start after mid-June. If you're joining from Mumbai, we'll have some suggested trains for you to consider, which we'll be adding soon. Keep checking back for updates.</p>
       </div>
     </section>
 
